added second page

--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,10 @@
       <div class="foreground">
         <ul class="nav-bar-links">
           <li>
-            <a href="" class="all-movies-link">Find your film</a>
+            <a href="./index.html" class="all-movies-link">Find your film</a>
           </li>
           <li>
-            <a href="" class="watchlist-link">Watchlist</a>
+            <a href="./watchlist.html" class="watchlist-link">Watchlist</a>
           </li>
         </ul>
       </div>
