--- a/src/watchlist.html
+++ b/src/watchlist.html
@@ -4,18 +4,50 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./index.css" />
+    <!-- CDN's -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Concert+One&family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Movie List</title>
   </head>
   <body>
     <div class="container">
-      <ul>
-        <li>
-          <a href=""></a>
-        </li>
-        <li>
-          <a href=""></a>
-        </li>
-      </ul>
+      <nav class="background"></nav>
+      <div class="foreground">
+        <ul class="nav-bar-links">
+          <li>
+            <a href="./index.html" class="all-movies-link-watchlist">Find your film</a>
+          </li>
+          <li>
+            <a href="./watchlist.html" class="watchlist-link-watchlist">Watchlist</a>
+          </li>
+        </ul>
+      </div>
+      <div class="search-for-movie">
+        <form class="search-form">
+          <i class="fa-solid fa-magnifying-glass"></i>
+          <input
+            class="search"
+            id="search"
+            type="text"
+            placeholder="Search for a movie"
+          />
+          <button type="submit">Search</button>
+        </form>
+      </div>
+      <main></main>
     </div>
   </body>
 </html>
