added navbar and mage logo

--- a/src/index.html
+++ b/src/index.html
@@ -24,17 +24,26 @@
   </head>
   <body>
     <div class="container">
-      <nav class="background"></nav>
-      <div class="foreground">
-        <ul class="nav-bar-links">
+      <nav class="background">
+        <ul class="nav-bar">
+          <li>Kup</li>
+          <li>Wynajmij</li>
+          <li>Sprzedaj</li>
+          <li>Kredyty</li>
+          <li>Znajdz posrednika</li>
+
           <li>
-            <a href="./index.html" class="all-movies-link">Find your film</a>
+            <div class="logo-container">
+              <img class="logo" src="./images/logo_final.svg" alt="" />
+              <h1>GrindIt</h1>
+            </div>
           </li>
-          <li>
-            <a href="./watchlist.html" class="watchlist-link">Watchlist</a>
-          </li>
+          <li>Zarzadzaj najmem</li>
+          <li>Promuj</li>
+          <li>Pomoc</li>
+          <li>Zaloguj sie</li>
         </ul>
-      </div>
+      </nav>
       <div class="search-for-movie">
         <form class="search-form">
           <i class="fa-solid fa-magnifying-glass"></i>
