fixed the search bar issue

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div class="container">
-      <nav class="background">
+      <nav>
         <ul class="nav-bar">
           <li>Kup</li>
           <li>Wynajmij</li>
@@ -44,6 +44,7 @@
           <li>Zaloguj sie</li>
         </ul>
       </nav>
+      <div class="background"></div>
       <div class="search-for-movie">
         <form class="search-form">
           <i class="fa-solid fa-magnifying-glass"></i>
@@ -57,7 +58,7 @@
         </form>
       </div>
     </div>
-    <main></main>
+    <main class="">dasdadasd</main>
     <script src="./index.js"></script>
   </body>
 </html>
