--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,50 @@
         </form>
       </div>
     </div>
-    <main class="">dasdadasd</main>
+    <main class="cards">
+      <div class="card">
+        <img
+          class="card__img"
+          src="./images/realestate.jpg"
+          alt="home for sale "
+        />
+        <h1 class="card__title">Sale</h1>
+        <p class="card__disc">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid sed
+          assumenda minus facere similique incidunt, sint commodi error voluptas
+          nemo, nobis cum optio sequi rem libero at veniam aperiam velit.
+        </p>
+        <a class="card__button" href="">Sale</a>
+      </div>
+      <div class="card">
+        <img
+          class="card__img"
+          src="./images/realestate.jpg"
+          alt="home for sale "
+        />
+        <h1 class="card__title">Sale</h1>
+        <p class="card__disc">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid sed
+          assumenda minus facere similique incidunt, sint commodi error voluptas
+          nemo, nobis cum optio sequi rem libero at veniam aperiam velit.
+        </p>
+        <a class="card__button" href="">Sale</a>
+      </div>
+      <div class="card">
+        <img
+          class="card__img"
+          src="./images/realestate.jpg"
+          alt="home for sale "
+        />
+        <h1 class="card__title">Sale</h1>
+        <p class="card__disc">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid sed
+          assumenda minus facere similique incidunt, sint commodi error voluptas
+          nemo, nobis cum optio sequi rem libero at veniam aperiam velit.
+        </p>
+        <a class="card__button" href="">Sale</a>
+      </div>
+    </main>
     <script src="./index.js"></script>
   </body>
 </html>
