--- a/src/index.html
+++ b/src/index.html
@@ -64,11 +64,7 @@
     </div>
     <main class="cards">
       <div class="card">
-        <img
-          class="card__img"
-          src="./images/realestate.jpg"
-          alt="home for sale "
-        />
+        <div class="card__img"></div>
         <h1 class="card__title">Sale</h1>
         <p class="card__disc">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid sed
@@ -78,11 +74,7 @@
         <a class="card__button" href="">Sale</a>
       </div>
       <div class="card">
-        <img
-          class="card__img"
-          src="./images/realestate.jpg"
-          alt="home for sale "
-        />
+        <div class="card__img"></div>
         <h1 class="card__title">Sale</h1>
         <p class="card__disc">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid sed
@@ -92,11 +84,7 @@
         <a class="card__button" href="">Sale</a>
       </div>
       <div class="card">
-        <img
-          class="card__img"
-          src="./images/realestate.jpg"
-          alt="home for sale "
-        />
+        <div class="card__img"></div>
         <h1 class="card__title">Sale</h1>
         <p class="card__disc">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid sed
