--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
         <p class="card__disc">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid sed
           assumenda minus facere similique incidunt, sint commodi error voluptas
-          nemo, nobis cum optio sequi rem libero at veniam aperiam velit.
+          nemo, nobis cum optio sequi rem libero at veniam aperiam velit.....
         </p>
         <a class="card__button" href="">Sale</a>
       </div>
