--- a/src/index.html
+++ b/src/index.html
@@ -65,33 +65,23 @@
     <main class="cards">
       <div class="card">
         <div class="card__img"></div>
-        <h1 class="card__title">Sale</h1>
+        <h1 class="card__title">Wynajmij</h1>
         <p class="card__disc">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid sed
-          assumenda minus facere similique incidunt, sint commodi error voluptas
-          nemo, nobis cum optio sequi rem libero at veniam aperiam velit.
+          Wynajmij mieszkanie i zamieszkaj w nim już w tym tygodniu.
         </p>
-        <a class="card__button" href="">Sale</a>
+        <a class="card__button" href="">Więcej</a>
       </div>
       <div class="card">
         <div class="card__img"></div>
-        <h1 class="card__title">Sale</h1>
-        <p class="card__disc">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid sed
-          assumenda minus facere similique incidunt, sint commodi error voluptas
-          nemo, nobis cum optio sequi rem libero at veniam aperiam velit.....
-        </p>
-        <a class="card__button" href="">Sale</a>
+        <h1 class="card__title">Sprzedaj</h1>
+        <p class="card__disc">Sprzedaj swoje mieszkanie.</p>
+        <a class="card__button" href="">Więcej</a>
       </div>
       <div class="card">
         <div class="card__img"></div>
-        <h1 class="card__title">Sale</h1>
-        <p class="card__disc">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid sed
-          assumenda minus facere similique incidunt, sint commodi error voluptas
-          nemo, nobis cum optio sequi rem libero at veniam aperiam velit.
-        </p>
-        <a class="card__button" href="">Sale</a>
+        <h1 class="card__title">Kup</h1>
+        <p class="card__disc">Kup nieruchomość za najlepsza cenę.</p>
+        <a class="card__button" href="">Więcej</a>
       </div>
     </main>
     <script src="./index.js"></script>
