--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
       <div class="card">
         <div class="card__img"></div>
         <h1 class="card__title">Kup</h1>
-        <p class="card__disc">Kup nieruchomość za najlepsza cenę.</p>
+        <p class="card__disc">Kup nieruchomość za najlepsza cenę!</p>
         <a class="card__button" href="">Więcej</a>
       </div>
     </main>
