--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
           <li>Zarzadzaj najmem</li>
           <li>Promuj</li>
           <li>Pomoc</li>
-          <li>Zaloguj sie</li>
+          <li><a href="">Zaloguj sie</a></li>
         </ul>
       </nav>
       <div class="background"></div>
